# bitvec

./: README.md  pyproject.toml
src/bitvec/: __init__.py
tests/: test_bitvec.py
