[project]
name = "bitvec"
version = "0.0.1"
authors = [
    { name="Thomas Mailund", email="thomas@mailund.dk" },
]
description = "A simple bit vector where you can do rank queries."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mailund/bitvec"
"Bug Tracker" = "https://github.com/mailund/bitvec/issues"

[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"
